Convert Tailwind CSS plugin to Unocss preset
Convert the Tailwind CSS plugin to a Unocss preset.

* **package.json**
  - Update `name` to `unocss-primeui`.
  - Update `description` to "Utilities for Unocss".
  - Update `peerDependencies` and `devDependencies` to include `unocss`.

* **README.md**
  - Update title to "Unocss Utilities for Prime UI Libraries".
  - Update installation and usage instructions to use Unocss.
  - Update references from Tailwind CSS to Unocss.

* **src/index.js**
  - Replace `tailwindcss/plugin` with `unocss`.
  - Update the module export to use Unocss preset format.
  - Update utility function imports to match Unocss format.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "tailwindcss-primeui",
+    "name": "unocss-primeui",
     "version": "0.4.0",
-    "description": "Utilities for Tailwind CSS",
+    "description": "Utilities for Unocss",
     "repository": {
         "type": "git",
         "url": "https://github.com/primefaces/tailwindcss-primevue.git"
@@ -21,10 +21,10 @@
         "format:check": "prettier --check \"**/*.js\""
     },
     "peerDependencies": {
-        "tailwindcss": ">=3.1.0"
+        "unocss": ">=3.1.0"
     },
     "devDependencies": {
         "prettier": "^2.8.8",
-        "tailwindcss": "^3.1.0"
+        "unocss": "^3.1.0"
     }
 }
